# Autofactory

./: .gitignore  .sbtopts  .tern-project  Cargo.toml  README.md  Space.md  add.cu  add_cuda  brainfuck.md  build.sbt  index.js  minecraft.md  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  test.c  test.h
.cargo/: Config.toml
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: rust.yml
demo/: .eslintrc.json  README.md  index.html  index.js  package.json  pnpm-lock.yaml
native/: Cargo.toml
native/src/: _main.rs  blocks.rs  entity.rs  lib.rs  main.rs  rendering.rs  tests.rs  utils.rs
native/src/blocks/: air.rs  airblock.rs  blocktype.rs  default.rs  environment.rs  example.rs  exampleblock.rs  geometry.rs  storage.rs  types.rs
native/src/blocks/storage/: chunkstorage.rs  octreestorage.rs
native/src/blocks/types/: air.rs  example.rs  test.rs  vacuum.rs
native/tests-main/: main.rs
ne-electron/: .eslintrc.js  gulpfile.js  package.json
ne-electron/src/: index.js
ne-electron/src/app/: .eslintrc  ModuleWorker.js  index.js  index.pug  index.styl  minecraft.md  renderer.js  utils.js
src/: Main.scala  Space2.scala  Space3.scala  UniqueCharacterSolver.scala  Vector.scala  _main.rs  index.js  renderer.js  tests.rs  utils.rs
src/app/: index.js  index.pug  renderer.js
src/blocks/: environment.rs  geometry.rs  storage.rs
src/blocks/storage/: chunkstorage.rs  octreestorage.rs
src/blocks/types/: test.rs  vacuum.rs
