[package]
name = "ne"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "UNLICENCED"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "ne"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
physx-sys = "0.4.9"
static_assertions = "1.1.0"
array-macro = "1.0.5"